# iotc-stm32-u5-esp32-c3-demo

./: DEVELOPER_GUIDE.md  README.md
Projects/PubSub/B-U585I-IOT02A/: .cproject
Projects/PubSub/B-U585I-IOT02A/Inc/: esp32.h  main.h
Projects/PubSub/B-U585I-IOT02A/Src/: esp32.c  main.c
Projects/PubSub/B-U585I-IOT02A/lib/iotc-c-lib/: .gitignore  CONTRIBUTING.md  README.md
Projects/PubSub/B-U585I-IOT02A/lib/iotc-c-lib/.github/workflows/: main.yml
Projects/PubSub/B-U585I-IOT02A/lib/iotc-c-lib/include/: iotconnect_common.h  iotconnect_device_identity.h  iotconnect_discovery.h  iotconnect_discovery_v3.h  iotconnect_lib.h  iotconnect_lib_config.h  iotconnect_telemetry.h
Projects/PubSub/B-U585I-IOT02A/lib/iotc-c-lib/src/: iotconnect_common.c  iotconnect_device_identity.c  iotconnect_discovery.c  iotconnect_discovery_v3.c  iotconnect_event.c  iotconnect_lib.c  iotconnect_telemetry.bak  iotconnect_telemetry.c
Projects/PubSub/B-U585I-IOT02A/lib/iotc-c-lib/tests/: .gitignore  CMakeLists.txt  build-tests.sh  discovery.c  event.c  telemetry.c
Projects/PubSub/B-U585I-IOT02A/lib/iotc-c-lib/tools/ecc-certs/: README.md  iotconnect-config  makecerts.sh  pem-to-c.sh
